[tool.poetry]
name = "py_midicsv"
version = "3.1.0"
description = "A library for converting MIDI files from and to CSV format"
authors = ["Tim Wedde <timwedde@icloud.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/timwedde/py_midicsv"
homepage = "https://github.com/timwedde/py_midicsv"

[tool.poetry.scripts]
midicsvpy = "py_midicsv.cli:midicsv"
csvmidipy = "py_midicsv.cli:csvmidi"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.3"
pytest = "^7.1.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
