[tool.poetry]
name = "py_midicsv"
version = "4.1.0"
description = "A library for converting MIDI files from and to CSV format"
authors = ["Tim Wedde <timwedde@icloud.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/timwedde/py_midicsv"
homepage = "https://github.com/timwedde/py_midicsv"

[tool.poetry.scripts]
midicsvpy = "py_midicsv.cli:midicsv"
csvmidipy = "py_midicsv.cli:csvmidi"

[tool.poetry.dependencies]
python = "^3.8"
rich-click = "^1.6.1"

[tool.poetry.dev-dependencies]
pdoc3 = "^0.10.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.5.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.ruff]
fix = true
force-exclude = true # necessary for excludes to work in pre-commit
exclude = [
    # "path/",
]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",
    "E722",
    "TID252",
    "C901",
    "F405",
    "F403",
]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "S105",
    "S106",
    "S107",
    "C",
    "B",
    "Q",
    "RUF",
]
